# cad-models

./: .gitignore  .gitmodules  README.md
build123d_models/: main.py  pyproject.toml  test.ipynb
libs/: explode.scad
libs/bezier_solids/: bezier_solids.scad  bezier_solids_generated.scad
libs/threads/: threads.scad
openscad/: bezier_solids.scad  filamentroller.scad  threadholder.scad
openscad/containers/: CardBoxTest.scad  ClassBox.scad  MonsterBox.scad
openscad/threadholder/: threadholder.scad
projects/gloomhaven/: gloomhaven_const.scad  osbuild.toml  standee_holder_box.scad
projects/lithophanes/: lithophane_lantern_rounded_base_plate.scad  lithophane_lantern_rounded_top_cage.scad
projects/threadholder/: threadholder.scad
renders/gloomhaven/: coin_box_orig.scad  envelope_box.scad  gloomhaven_const.scad  large_obstacle_tiles.scad  manuals_box.scad  monster_box.scad  obstacle_tiles.scad  standee_holder_box.scad  tile_box_large_mod.scad
renders/lithophanes/: lithophane_lantern_100x150x4.scad
renders/picture_frames/: voronoi_border_frame.scad
scripts/: 3d_plot.py
src/: graph.scad
src/boxes/: box_lid.scad  box_text.scad  card_box.scad  multi_box.scad  split_box.scad  standard_box.scad
src/frames/: frame_backing_board.scad  frame_backing_board_holder.scad  frame_box.scad  frame_box_negative.scad  frame_box_positive.scad  frame_hanging_teeth.scad  picture_frame_box.scad  picture_frame_box_negative.scad  picture_frame_box_positive.scad
utils/openscad_project_builder/: cli.py  pyproject.toml
utils/openscad_project_builder/osbuild/: project.py
(+85 files in other folders)
