[project]
name = "osbuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "igittigitt>=2.2.0",
    "loguru>=0.7.3",
]

[project.scripts]
osbuild = "cli:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
